fixed text wrapping in projects

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -27,6 +27,6 @@
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
 }
 .card:hover .cardimg {
-  transform: scale(1.1);
+  transform: scale(1.05);
   transition: ease 0.5s;
 }
